# pep-workshop

./: .gitignore  README.md  app.py  bookings.json  hello.py  pyproject.toml
.github/workflows/: tests.yml
src/: configs.py
src/models/: bookings.py
tests/: conftest.py
tests/auth/: conftest.py  test_auth_invalid.py  test_auth_valid.py
tests/booking/: conftest.py  test_delete_booking.py  test_get_booking.py  test_get_booking_ids.py  test_partial_update_booking.py
tests/ping/: conftest.py  test_health_check.py
