[project]
name = "pep-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.6.1",
    "pydantic>=2.10.3",
    "pytest-check>=2.4.1",
    "pytest>=8.3.4",
    "requests>=2.32.3",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.1",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "SIM"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    ".",
]
addopts = "--tb=short"
markers = [
    "smoke: Some tests",
    "wip: Work in progress"
]
